tests/sksl/errors/Ossfuzz58375.glsl
### Compilation failed:

error: 1: layout qualifier 'push_constant' is not permitted here
layout (push_constant) in s { int x; };
^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
